Fixed issue with control labels not being right-aligned.

--- a/web/styles/divelog.less
+++ b/web/styles/divelog.less
@@ -6,9 +6,17 @@ span.tb-unit {
 	margin-left: -25px;
 }
 
+label.right-aligned {
+	float: right;
+}
+
 div.tb-help-bubble {
 	clear: both;
 	margin-left: -25px;
+}
+
+div.forgotten-password-link {
+	margin-top: 12px;
 }
 
 .time-picker-select {
